# incremental-fluids-kokkos

./: CMakeLists.txt  README.md
1-matrixless/: CMakeLists.txt  Fluid.cpp  FluidFunctors.h  FluidQuantity.h  FluidSolver.h
2-better-advection/: CMakeLists.txt  Fluid.cpp  FluidFunctors.h  FluidQuantity.h  FluidSolver.h  kokkos_shared.h
3-conjugate-gradients/: CMakeLists.txt  Fluid.cpp  FluidFunctors.h  FluidQuantity.h  FluidSolver.h
3-conjugate-gradients_GS/: CMakeLists.txt  Documentation.md  Fluid.cpp  FluidFunctors.h  FluidSolver.h
4-solid-boundaries/: CMakeLists.txt  Fluid.cpp  FluidFunctors.h  FluidQuantity.h  FluidSolver.h  SolidBody.h  kokkos_shared.h  math_utils.h
5-curved-boundaries/: CMakeLists.txt  Fluid.cpp  FluidFunctors.h  FluidQuantity.h  FluidSolver.h  SolidBody.h
cnpy/: README  cnpy_example.cpp  data.npy
doc/: readme.md
